samples/errors/int_op_with_float.opal
;; Error: integer operator `+` requires Int, but 1.0 is Float
(let main {} (+ 1.0 2.0))
